# mining-motifs-hypergraphs

./: .gitignore  README.md  USAGE.md  pyproject.toml  requirements.txt  run_benchmarks.sh
examples/: run_example.py
logs/: email_eu_benchmark.txt
scripts/: benchmark_motifs.py  run_benchmarks.sh
src/: __init__.py  dataloaders.py  hypergraph_motifs.py
src/mining_motifs_hyperhraphs.egg-info/: PKG-INFO  SOURCES.txt
