[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mining-motifs-hyperhraphs"
version = "0.0.1"
description = "Tools for counting higher-order motifs in hypergraphs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
